fix nodetool alignment after changing focus

--- a/app/assets/stylesheets/_discourse_node.scss
+++ b/app/assets/stylesheets/_discourse_node.scss
@@ -98,6 +98,7 @@
 
         .nodetool {
             padding: 8px;
+            display: inline;
             // color: $tool_color !important;
             // border: 1px solid #EEE;
             &+.pintool {
